fix color and align text

--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -22,7 +22,7 @@ main {
 .logo {
 	width: 100%;
 	height: 36px;
-	background-color: #999;
+	background-color: #ccc;
 }
 .select_lan {
 	float: right;
@@ -255,6 +255,10 @@ span {
 	margin: 0 40px 0 40px;
 	line-height: 1.3em;
 	font-size: 15px;
+	text-align: left;
+}
+.section_about p:first-child {
+	margin-left: 4px;
 }
 .sinonimi ul a  {
 	color: #000000;
@@ -283,7 +287,7 @@ span {
 .breadcrumbs {
     width: 100%;
     height: 30px;
-    background-color: #999;
+    background-color: #ccc;
     font-size: 26px;
 }
 .breadcrumbs ul li {
